docs: improve wording in architecture guide

--- a/docs/5.architecture.md
+++ b/docs/5.architecture.md
@@ -22,8 +22,8 @@ This document describes the key components of LuaRadio and how they interact.
         * [Running](#running)
         * [Termination](#termination)
     * [Composite Blocks](#composite-blocks)
-        * [Hierarchical Blocks](#hierarchical-blocks)
-        * [Top-level Blocks](#top-level-blocks)
+        * [Hierarchical Blocks](#hierarchical-block)
+        * [Top-level Blocks](#top-level-block)
             * [Connection](#connection-1)
             * [Run Preparation](#run-preparation)
             * [Running](#running-1)
@@ -33,8 +33,9 @@ This document describes the key components of LuaRadio and how they interact.
 
 ### Block Model
 
-Blocks accept vectors of input samples as arguments, process them, and return
-vectors of output samples. Blocks may retain state.
+Blocks provide a `process(...)` method that accepts vectors of input samples as
+arguments, processes them, and returns vectors of output samples. Blocks may
+retain state.
 
 Input sample vectors must be processed in their entirety by blocks in
 `process(...)`. Samples across multiple inputs are synchronized, meaning that
@@ -56,7 +57,7 @@ unmarshalling.
 
 Vectors of [`Object` data type](0.reference-manual.md#objecttype) samples are
 marshalled and unmarshalled with [MessagePack](http://msgpack.org/) and
-serialized as byte strings, preceded with their length.
+serialized as byte strings, preceded by their length.
 
 ### Concurrency
 
@@ -92,32 +93,32 @@ described above is anchored throughout the processing lifetime of the block.
 Moving a vector of samples between blocks has an overhead of two copies: one
 from writing it to the UNIX socket in the producing block, and one from reading
 it from the UNIX socket in the consuming block.  This overhead could be reduced
-to one one copy, by changing the sample transport from UNIX sockets to a shared
+to one copy, by changing the sample transport from UNIX sockets to a shared
 memory circular buffer (not unlike GNU Radio).
 
 The overhead could be further reduced to zero copies, if the vectors for output
 samples were not allocated by the block, but instead pointers into the
-persistent shared memory circular buffer (also not unlike GNU Radio), which is
+persistent shared memory circular buffer (also not unlike GNU Radio) that is
 shared between the output and input port.  Implementing this would likely
-require a different `process(...)` signature, and a new resizing mechanism for
-output vectors.
+require a different `process(...)` signature that includes the outputs vectors
+as arguments, and a new resizing mechanism for output vectors.
 
 Multi-processing instead of multi-threading for concurrency incurs some memory
 and CPU overhead from requiring a process for each block. However,
-multi-threading poses other issues like sharing instantiated and initialized
-block state with the Lua states in each thread. This problem is addressed in
-the multi-processing architecture with forking.
+multi-threading poses other issues, like sharing instantiated and initialized
+block state of the parent thread with the Lua state of each child thread. This
+problem is addressed in the multi-processing architecture with forking.
 
 Block processes currently have a slightly larger memory footprint than
 necessary, as other blocks and their initialized objects, e.g. buffers
 allocated in `initialize()`, are not yet released after forking. This can be
-addressed by deleting references to all unneeded blocks and associated
+addressed by pruning references to all unneeded blocks and associated
 connectivity after forking.
 
-Blocks cannot be manipulated at runtime, e.g. modifying attributes or calling
-methods on them, since each block runs in an independent Lua state. This could
-be worked around by implementing RPC for these attributes and calls, but this
-would add substantial complexity.
+Blocks cannot be manipulated at runtime, e.g. modifying their attributes or
+calling methods on them, since each block runs in an independent Lua state.
+This could be worked around by implementing RPC for these attributes and calls,
+but this would add substantial complexity.
 
 ## Concepts
 
@@ -131,8 +132,8 @@ backed by a Lua object.
 
 `CStruct` types are serialized as raw contiguous samples between blocks in
 their native memory representation, with no marshalling and unmarshalling.
-These types must be of a constant size, so the sample boundaries are
-well-defined in the stream.
+These types must be of a fixed size, so the sample boundaries are well-defined
+in the stream.
 
 `Object` types are serialized as [MessagePack](http://msgpack.org/) marshalled
 bytes between blocks. These types can be variable size, may nest other Lua
@@ -168,10 +169,10 @@ The use of a structure to back `CStruct` types, rather than the raw C type
 (e.g.  `float`), is for implementation reasons. It allows the framework to
 associate a metatable with the type using [LuaJIT
 FFI](http://luajit.org/ext_ffi.html) library's
-[`ffi.metatype()`](http://luajit.org/ext_ffi_api.html#ffi_metatype), which
-binds metamethods and methods to all instances of the type. It also makes those
-instances distinct from other occurrences of the underlying data types (e.g.
-`float32_t` vs `float`).
+[`ffi.metatype()`](http://luajit.org/ext_ffi_api.html#ffi_metatype), to bind
+useful metamethods and methods to all instances of the type. It also makes
+those instances distinct from other occurrences of the underlying data types
+(e.g.  `float32_t` vs `float`).
 
 Users can define their own `CStruct` and `Object` types and bind methods to
 them. See the [Creating Blocks](3.creating-blocks.md#custom-types) guide for
@@ -187,8 +188,8 @@ overhead of serializing the sample and calling the block to process it would
 exceed the cost of processing it. Instead, blocks operate on a vector of
 samples at a time, to amortize the overhead of serialization.
 
-Vectors are dynamic arrays of a `CStruct` or `Object` based data type.  Blocks
-get their inputs in the form of vectors and return their outputs as vectors.
+Vectors are dynamic arrays of a `CStruct` or `Object` data type.  Blocks get
+their inputs as vectors, and return their outputs as vectors.
 
 Each data type provides two static methods for creating a vector of itself:
 `.vector(num)` for a zero-initialized vector, or `.vector_from_array(arr)` for
@@ -201,8 +202,8 @@ local vec = radio.types.ComplexFloat32.vector(16)
 -- Byte vector of length 10
 local vec = radio.types.Byte.vector(10)
 
--- Float vector of length 3 from array initializer
-local vec = radio.types.Float.vector_from_array({1.0, 2.0, 3.0})
+-- Float32 vector of length 3 from array initializer
+local vec = radio.types.Float32.vector_from_array({1.0, 2.0, 3.0})
 ```
 
 Vectors can be resized and appended to:
@@ -224,14 +225,14 @@ the `.length` member. These samples can be modified directly in Lua, or can be
 passed to an external library for processing.
 
 Resizing a `CStruct` typed vector only causes a re-allocation when it is grown
-to a larger size. Otherwise, the underlying buffer is retained on resizing to a
-smaller size; just the bookkeeping is updated. This allows blocks that reuse
-vectors for output samples to approach constant memory usage, as the vectors
-will reach a stable size for the inputs it consumes.
+to a larger size. The underlying buffer is retained on resizing to a smaller
+size; just the bookkeeping is updated. This allows blocks that reuse vectors
+for output samples to approach constant memory usage, as the underlying memory
+of the vectors will reach a stable size for the inputs the block consumes.
 
 All `CStruct` typed vectors are allocated with page alignment, to enable
 processing with libraries that require, or perform better with, aligned
-buffers. This is usually because SIMD operations are involved.
+buffers. This is often because SIMD operations are involved.
 
 Vectors of `Object` typed samples are stored in a Lua array, but provide a
 compatible interface to `CStruct` typed vectors. These vectors cannot be passed
@@ -292,7 +293,7 @@ Blocks must register type signatures with the
 [`add_type_signature()`](0.reference-manual.md#blockadd_type_signatureinputs-outputs-process_funcnil-initialize_funcnil)
 method in their `instantiate()` constructor. This method takes an array of
 input port descriptors, followed by an array of output port descriptors. Each
-port descriptor specifies the name and the data type. For example, a `AddBlock`
+port descriptor specifies a name and a data type. For example, an `AddBlock`
 that supports both complex-valued and real-valued inputs would register:
 
 ``` lua
@@ -306,11 +307,11 @@ end
 
 Source and sink blocks may specify empty arrays for inputs or outputs,
 respectively, when they add type signatures. Otherwise, sources and sinks are
-implemented the same way as other blocks.
+implemented largely the same way as other blocks.
 
-The `add_type_signature()` method can also be used to specify different process
-and initialize methods to type signatures, that are bound to the block on
-differentiation. See the [Creating
+The `add_type_signature()` method can also be used to specify different
+`process()` and `initialize()` methods to type signatures, that are bound to
+the block on differentiation. See the [Creating
 Blocks](3.creating-blocks.md#type-signatures) guide for examples.
 
 #### Connection
@@ -320,15 +321,16 @@ After a block is instantiated, it can be connected into a flow graph under a
 Blocks](#composite-blocks) section below.
 
 When the `add_type_signature()` method is called in a block's `instantiate()`
-constructor, it builds `PipeInput` and `PipeOutput` containers for each input
-and output port of the block, stored in arrays under `.inputs` and `.outputs`
-members. These containers are the actual "ports" connected in a flow graph.
-They contain a name and block owner, and are later populated with their
-concrete data type and a shared `Pipe` object.
+constructor, it builds `PipeInput` and `PipeOutput` containers for each
+specified input and output port of the block, and stores them in arrays under
+the `.inputs` and `.outputs` members. These containers are the actual "ports"
+connected in a flow graph.  They contain a name and block owner, and are later
+populated with their concrete data type and a shared `Pipe` object.
 
 The act of connecting two blocks in a flow graph is registering the block's
 `PipeInput` instance as the key and the `PipeOutput` instance as a value in a
-hash table, thereby building a graph of input and output connections.
+hash table owned by a `CompositeBlock`, thereby building a graph of input and
+output connections.
 
 When a connection is made, a `Pipe` object is also created and registered under
 both `PipeInput` and `PipeOutput` containers of the connected blocks. This
@@ -348,9 +350,9 @@ blocks and ends at the sink blocks, and is carried out in a downstream order.
 A block is differentiated by its input types, using the
 [`differentiate()`](0.reference-manual.md#blockdifferentiateinput_data_types)
 method. This method takes an array of input data types and differentiates the
-block into a compatible type signature by checking for matching input data
-types in each registered type signature. The method raises an error if a
-compatible type signature is not found.
+block into a compatible type signature, by finding a registered type signature
+with matching input data types.  The method raises an error if a compatible
+type signature is not found.
 
 Type signatures may also specify a function predicate instead of a concrete
 data type for input ports. For example, the
@@ -395,13 +397,13 @@ In the `initialize()` method, the block can perform data type dependent
 initialization with the
 [`get_input_type()`](0.reference-manual.md#blockget_input_typeindex1) and
 [`get_output_type()`](0.reference-manual.md#blockget_output_typeindex1)
-methods, which return arrays of the differentiated input and output types,
-respectively.
+methods, which return the differentiated input and output types of the
+specified port index, respectively.
 
 The block can also perform sample rate dependent initialization with
 [`get_rate()`](0.reference-manual.md#blockget_rate), which recursively calls
 `get_rate()` on upstream blocks in the flow graph to determine the sample rate.
-Blocks may modify the sample rate for downstream blocks by overloading this
+Blocks may modify the sample rate for downstream blocks by overriding this
 method, and source blocks are required to implement it to return a concrete
 value.
 
@@ -427,7 +429,7 @@ Blocks are responsible for managing their output sample vectors. Most blocks
 allocate persistent output sample vectors in their `initialize()` method, and
 then resize, populate, and return them in `process(...)`. Since vector resizes
 only cause re-allocation when they are grown, the underlying memory of output
-vectors approach a stable size as the vector is resized to accomodate the
+vectors approach a stable size as the vector is resized to accommodate the
 block's inputs.
 
 For example, the process method for adding two inputs might look like:
@@ -476,7 +478,7 @@ blocks to terminate similarly.
 Sources that produce a finite number of samples will exit naturally after they
 have produced all of their samples, triggering the collapse of the flow graph.
 Sources that run indefinitely, on the other hand, can only be shutdown by the
-framework forcibly, when the user requests exit with the `SIGINT` signal.
+framework forcibly by the `SIGINT` signal.
 
 A block shutdown does not mean samples are lost. Samples are buffered in the
 underlying implementation of the `Pipe`, even after the producing block has
@@ -490,11 +492,11 @@ Code reference: [Block class](../radio/core/block.lua).
 
 The [`CompositeBlock`](0.reference-manual.md#compositeblock) is a special block
 used to build and run flow graphs.  It can either be used as a hierarchical
-block, a composition of blocks abstracted into one block with redefined
-inputs/outputs at its boundary, or as a top-level block, a composition of
+block: a composition of blocks abstracted into one block with redefined
+inputs/outputs at its boundary, or as a top-level block: a composition of
 blocks forming a complete flow graph that can be run.
 
-#### Hierarchical Blocks
+#### Hierarchical Block
 
 A `CompositeBlock` used for a hierarchical block builds an internal flow graph
 by connecting block ports with the
@@ -504,8 +506,8 @@ inputs or outputs, hierarchical blocks also specify a type signature with
 `add_type_signature()` for their boundary inputs and outputs.
 
 When a `CompositeBlock` adds a type signature, instead of building the
-`PipeInput` and `PipeOutput` input and output ports under `.inputs` and
-`.outputs` as a normal block would, the `CompositeBlock` builds
+`PipeInput` and `PipeOutput` input and output ports under the `.inputs` and
+`.outputs` arrays as a normal block would, the `CompositeBlock` builds
 `AliasedPipeInput` and `AliasedPipeOutput` ports, respectively. These are
 special input and output ports that alias existing input and output ports
 inside a flow graph.
@@ -516,7 +518,7 @@ in the flow graph.
 
 Code reference: [CompositeBlock class](../radio/core/composite.lua).
 
-#### Top-level Blocks
+#### Top-level Block
 
 A `CompositeBlock` used for a top-level block builds a flow graph by connecting
 block ports with the [`connect()`](0.reference-manual.md#compositeblockconnect)
@@ -536,8 +538,8 @@ If a hierarchical block is connected into a top-level block, then its
 `AliasedPipeInput` and `AliasedPipeOutput` ports are followed to the underlying
 real `PipeInput` and `PipeOutput` ports, and those are the input and output
 port instances registered in the flow graph. This means that the hierarchical
-block does not exist in the actual top-level flow graph; it's just a
-convenience for composing blocks.
+block does not exist in a top-level flow graph; it's just a convenience for
+composing blocks.
 
 Code reference: [CompositeBlock class](../radio/core/composite.lua).
 
@@ -568,7 +570,8 @@ are fed as the input types to downstream blocks for differentiation.
 
 The evaluation order is followed once to `differentiate()` each block, once to
 check that all of its input port sample rates match, and once to `initialize()`
-each block.
+each block. If input port sample rates do not match, the flow graph is not run
+and an error is raised.
 
 Finally, all of the `Pipe` objects in the flow graph are initialized. Pipes are
 backed by anonymous UNIX socket pairs created by `socketpair()`.
@@ -583,12 +586,13 @@ At this stage, the flow graph is fully validated, differentiated, initialized,
 and is ready to run.
 
 The `CompositeBlock` first blocks `SIGINT` and `SIGCHLD` signals with
-`sigprocmask()`, so that it can synchronously detect these signals with
+`sigprocmask()`, so that it can later synchronously detect these signals with
 `sigpending()` in `wait()`. The `CompositeBlock` then calls `fork()` for each
 block.
 
 The child process for each block closes all unneeded file descriptors, and
-calls the block's main `run()` method. If this method returns naturally due to
+calls the block's main `run()` method. The child process spends the majority of
+its processing lifetime in this method. If this method returns naturally due to
 a flow graph collapse, the child exits with exit code 0. If it returns because
 of a runtime error, the child prints the error and backtrace to standard error,
 and exits with exit code 1.
@@ -618,8 +622,8 @@ the flow graph has fully collapsed, and then unblocks the `SIGINT` and
 `SIGCHLD` signals.
 
 The [`status()`](0.reference-manual.md#compositeblockstatus) method checks if
-any block is still running with `kill(pid, 0)`.  If all blocks have exited, it
-waits on each block PID with `waitpid()`, and then unblocks the `SIGINT` and
+any block is still running with `kill(<pid>, 0)`.  If all blocks have exited,
+it waits on each block PID with `waitpid()`, and then unblocks the `SIGINT` and
 `SIGCHLD` signals.
 
 Code reference: [CompositeBlock class](../radio/core/composite.lua).
