docs: improve wording in comparison to gnuradio document

--- a/docs/6.comparison-gnuradio.md
+++ b/docs/6.comparison-gnuradio.md
@@ -6,6 +6,7 @@ are inspired by GNU Radio.
 
 However, LuaRadio differs from GNU Radio in many respects:
 
+* [Purpose](#purpose)
 * [Footprint](#footprint)
 * [License](#license)
 * [Extension](#extension)
@@ -16,25 +17,31 @@ However, LuaRadio differs from GNU Radio in many respects:
 * [Performance](#performance)
 * [Maturity](#maturity)
 
+## Purpose
+
+LuaRadio is more inclined towards scripting and prototyping than GNU Radio, and
+emphasizes fast block development.
+
 ## Footprint
 
-A binary GNU Radio installation weighs in at over 100 MB. When the installation
-includes development support, the [boost](http://www.boost.org/) development
-files and numerous other libraries and tools (gsl, blas, swig, orc, etc.) can
-add another 100 MB or more.
+GNU Radio has a large size footprint. A binary GNU Radio installation weighs in
+at over 100 MB. When the installation includes development support, the
+[boost](http://www.boost.org/) development headers and numerous other libraries
+and tools (gsl, blas, swig, orc, etc.) can add another 100 MB or more.
 
-GNU Radio compilation is slow, especially on embedded targets. Compiled
-versions of GNU Radio modules and applications can also break in complex ways
-when GNU Radio or the boost runtime is updated. These modules and applications
-require routine re-compilation — sometimes in a very particular order — to be
-linked correctly with the updated libraries and with each other.
+GNU Radio has a large compilation footprint, in terms of time and dependencies.
+GNU Radio framework and module compilation is generally slow. Compiled versions
+of GNU Radio modules and applications can also break in complex ways when the
+underlying GNU Radio or boost runtimes are updated. These modules and
+applications may require routine re-compilation — sometimes in a particular
+order — to be linked correctly with the updated libraries and each other.
 
-LuaRadio's total footprint is on the order of 1 MB and requires no compilation.
-LuaRadio has zero dependencies for non-real-time applications, and may
-otherwise use [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
+LuaRadio's total footprint is on the order of 1 MB and its blocks require no
+compilation.  LuaRadio has zero dependencies for non-real-time applications,
+and may otherwise use [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) or
 [libvolk](http://libvolk.org/) for acceleration in real-time applications.
 [liquid-dsp](https://github.com/jgaeddert/liquid-dsp) shares LuaRadio's
-affinity for minimal dependencies and making software defined radio more
+affinity for minimal dependencies and making software-defined radio more
 accessible to embedded Linux platforms.
 
 ## License
@@ -48,36 +55,41 @@ LuaRadio is licensed MIT, a more permissive license.
 
 GNU Radio blocks are written in C++ and have a lot of boilerplate for building,
 Python binding, and testing. Blocks sometimes use an esoteric form of string
-templating, e.g.
-[add_XX_impl.cc.t](https://github.com/gnuradio/gnuradio/blob/v3.7.9.2/gr-blocks/lib/add_XX_impl.cc.t#L53),
-to code generate support for multiple data types.  For examples of typical GNU
+templating (e.g.
+[`add_XX_impl.cc.t`](https://github.com/gnuradio/gnuradio/blob/v3.7.9.2/gr-blocks/lib/add_XX_impl.cc.t#L53))
+to code generate support for multiple data types. For examples of typical GNU
 Radio blocks, see the GNU Radio [Out-of-tree Modules
-guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/OutOfTreeModules) and
+guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/OutOfTreeModules),
 [Blocks Coding
 Guide](http://gnuradio.org/redmine/projects/gnuradio/wiki/BlocksCodingGuide),
 or the source code of one of the third-party modules on
 [CGRAN](http://www.cgran.org/).
 
-In GNU Radio, it's not possible to define first-class custom data types for
+GNU Radio does not support creating custom first-class data types for
 serialization between blocks, but blocks may exchange Protocol Data Units
 (PDUs) with [Tagged
 Streams](http://gnuradio.org/doc/doxygen/page_tagged_stream_blocks.html), which
-demarcate the boundaries of the structured data, or with asynchronous [Message
-Passing](http://gnuradio.org/doc/doxygen/page_msg_passing.html), which pass the
+demarcate the boundaries of the structured data, or use asynchronous [Message
+Passing](http://gnuradio.org/doc/doxygen/page_msg_passing.html), which pass
 data out-of-band of flow graph streams.
 
 LuaRadio blocks are written in pure Lua, have substantially less boilerplate,
-and require no compilation. LuaRadio blocks do not require bindings for the
-convenience of scripting. Blocks can support multiple data types natively, e.g
-[`AddBlock`](../radio/blocks/signal/add.lua), with LuaRadio's type signature
-system.  See the [Creating Blocks](3.creating-blocks.md) guide for more details
-on LuaRadio blocks.
+and require no compilation or bindings. In LuaRadio, the convenience of
+scripting applies to both defining flow graphs and developing blocks.  Blocks
+can support multiple data types natively, e.g
+[`add.lua`](../radio/blocks/signal/add.lua), with LuaRadio's type signature
+system. For examples of typical LuaRadio blocks, see the [Creating
+Blocks](3.creating-blocks.md) guide.
 
-LuaRadio allows defining custom data types based on fixed-size C structures or
-variable-sized Lua objects for serialization between blocks. This makes it easy
-and natural to create blocks that produce structured data (e.g. decoded
-packets). See the custom types section of [Creating
+LuaRadio supports creating custom first-class data types based on fixed-size C
+structures or variable-sized Lua objects for serialization between blocks. This
+makes it easy and natural to create blocks that produce structured data, e.g.
+decoded packets. See the custom types section of [Creating
 Blocks](3.creating-blocks.md#custom-types) for examples.
+
+Compare and contrast GNU Radio and LuaRadio blocks in their source trees: [GNU
+Radio](https://github.com/gnuradio/gnuradio/tree/master/gr-blocks/lib),
+[LuaRadio](../radio/blocks/signal/).
 
 ## Features
 
@@ -85,15 +97,15 @@ Blocks](3.creating-blocks.md#custom-types) for examples.
 
 GNU Radio's I/O signature system is limited to matching sizes of types (e.g.
 `sizeof(gr_complex)`) in block connections, whereas LuaRadio's type signature
-system is much more flexible. Types in block connections are matched explicitly
-in LuaRadio, and input types can also be specified by a function predicate.
-For example, the [`JSONSink`](0.reference-manual.md#jsonsink) block can accept
-any data type that implements `to_json()`.
+system is more complete and flexible. Types in block connections are matched
+explicitly in LuaRadio, and input types can also be specified by a function
+predicate.  For example, the [`JSONSink`](0.reference-manual.md#jsonsink) block
+can accept any data type that implements `to_json()`.
 
-GNU Radio blocks can only support one type signature, which pushes the problem
-of block type differentiation to the users. GNU Radio has developed a rich
-nomenclature for annotating their block names with their type signature, using
-suffixes like `_cc` and `_ff`, e.g. `multiply_cc`, `multiply_ff`,
+GNU Radio blocks can each only support one type signature, which pushes the
+problem of block type differentiation to the users. GNU Radio has developed a
+rich nomenclature for annotating their block names with their type signature,
+using suffixes like `_cc` and `_ff`, e.g. `multiply_cc`, `multiply_ff`,
 `fir_filter_ccc`, `fir_filter_ccf`, `fir_filter_fff` — scroll through [GNU
 Radio Sphinx documentation](http://gnuradio.org/doc/sphinx/) for more examples.
 
@@ -103,21 +115,21 @@ example, the [`MultiplyBlock`](0.reference-manual.md#multiplyblock) and
 complex-valued and real-valued input/output types, and the framework will
 automatically differentiate the correct type signature based on the block's
 connections in a flow graph. This helps with code reuse and consolidation, as
-well as ease of use for building flow graphs.
+well as ease of use in defining flow graphs.
 
 ### Sample Rate Propagation
 
 GNU Radio requires users to manually specify the sample rate of every block.
 This is alleviated by defining common sample rates in variables that are shared
-among blocks, but ultimately is still error prone. Some blocks need normalized
-parameters (e.g. angular frequency), which also requires users to compute the
-correct normalization.
+among blocks, but ultimately is still error prone. Some blocks require
+normalized parameters (e.g. angular frequency), which also obligates users to
+compute the correct normalization.
 
 LuaRadio automatically propagates sample rates between all blocks.  This
-reduces the chance of user error, as LuaRadio blocks require less
-configuration, and any frequency parameters that are required are in units of
-hertz. It also allows for a suite of convenience blocks that automatically
-perform sample rate dependent initialization, e.g.  the
+reduces the amount of configuration needed by blocks, and any frequency
+parameters that are required can be specified in units of hertz. It also allows
+for a suite of convenience blocks that automatically perform sample rate
+dependent initialization, e.g.  the
 [`LowpassFilterBlock`](0.reference-manual.md#lowpassfilterblock), whose
 parameters are just number of taps and a cutoff frequency in hertz.
 
@@ -129,18 +141,19 @@ and examples.
 
 ## Performance
 
-GNU Radio generally performs better than LuaRadio. If performance down to the
-last kilosamples per second is your priority, then you should use GNU Radio.
+Generally speaking, LuaRadio performance is on the same order as GNU Radio
+performance. In computationally expensive blocks, like filters, LuaRadio has
+matching or slightly better performance to GNU Radio. In other cases, LuaRadio
+may have 30% to 80% the performance of GNU Radio, but this is typically for
+blocks that are already in the very high throughput territory, e.g. hundreds to
+thousands of megasamples per second on an Intel i5 CPU. In a few cases,
+LuaRadio performance exceeds GNU Radio performance.
 
-That being said, LuaRadio performance is more than adequate for real-time SDR
-projects, and is almost always on the same order as GNU Radio performance. For
-example, in cases where a particular GNU Radio block does 630 MS/s, the
-equivalent LuaRadio block might do 300 MS/s. On very computationally expensive
-operations, LuaRadio performance approaches or matches GNU Radio performance.
-For example, FIR filtering performance in both frameworks is nearly identical.
-In some cases, LuaRadio performance exceeds GNU Radio performance.
+While LuaRadio performance is more than adequate for real-time SDR projects,
+GNU Radio still performs better than LuaRadio overall. If performance is your
+priority, then you should use GNU Radio.
 
-See the [Benchmarks](http://luaradio.io/benchmarks) page for empirical
+See the [Benchmarks](http://luaradio.io/benchmarks.html) page for empirical
 benchmarks on both LuaRadio and GNU Radio across several platforms.
 
 Future infrastructure improvements and additional library acceleration will
@@ -151,6 +164,9 @@ help LuaRadio close the performance gap.
 GNU Radio has a larger community, more blocks, more hardware support, and a
 more mature codebase.
 
-GNU Radio currently has more efficient signal processing blocks, like blocks
-with integrated decimation and translation, but these can be added to LuaRadio
-as needed.
+LuaRadio does not have a graphical flow graph editing tool, like the GNU Radio
+Companion (GRC).
+
+GNU Radio currently has some more efficient signal processing blocks, like
+blocks with integrated decimation and translation, but these can be added to
+LuaRadio as needed.
